--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -41,13 +41,14 @@ security:
   user:
     password: none
   oauth2:
-   
     client:
       accessTokenUri: http://${authserver.hostname}:${authserver.port}/${authserver.contextPath}/oauth/token
       userAuthorizationUri: http://${authserver.hostname}:${authserver.port}/${authserver.contextPath}/oauth/authorize
       clientId: acme
       clientSecret: acmesecret
-      
+      registered-redirect-uri: http://localhost:8765/login
+      pre-established-redirect-uri: http://localhost:8765/login
+      use-current-uri: false
     resource:
       jwt:
         keyValue: |
@@ -68,10 +69,6 @@ server:
 zuul:
   ignoredServices: '*'
   routes:
-    uaa:
-      path: /uaa/**
-      serviceId: authserver
-      sensitiveHeaders:
     user-service:
       path: /user-service/**
       stripPrefix: false
@@ -134,4 +131,4 @@ authserver:
 # Define the port where the API gateway server would be running. This could always be port 8080
 # since each docker container has it's own IP
 server:
-  port: 8765
+port: 8765
